# src/routes/heuristicas.routes.js
@@ -1,0 +1,10 @@
+const express = require("express");
+
+const heuristicasController = require("../controllers/heuristicas.controller");
+const authMiddleware = require("../middleware/auth.middleware");
+
+const router = express.Router();
+
+router.get("/:id", authMiddleware, heuristicasController.show);
+
+module.exports = router;
